                        reserved.
$COPYRIGHT$

Additional copyrights may follow

$HEADER$

===========================================================================

This file contains the main features as well as overviews of specific
bug fixes (and other actions) for each version of Open MPI since
version 1.0.

Trunk (not on release branches yet)
-----------------------------------

- Use _NSGetEnviron instead of environ on Mac OS X so that there
  are no undefined symbols in the shared libraries.
  --> Expected 1.2.3
- No longer require extra include flag for the C++ bindings.
  --> Expected 1.2.3
- Fix problem with optional Fortran types to be correctly initialized.
  --> Expected ?1.2.x?
- Release tarballs now use Autoconf 2.61 and Automake 1.10.
  --> Expected: 1.3
- Addition of a finer symbols export control via the visibiliy feature
  offered by some compilers.
  --> Expected: 1.3
- Addition of "dr" (data reliability) PML.
  --> Expected: 1.3
- Added threaded progress for the openib BTL.
  --> Expected: ?1.3?
- Added Microsoft Windows support.  See README.WINDOWS file for
  details.
  --> Expected: ???
- Fixed issue with pthread detection when compilers are not all
  from the same vendor.  Thanks to Ake Sandgren for the bug
  report.
  --> Expected 1.2.x
- Portals MTL
  --> Expected 1.2.x
- Added checkpoint/restart process fault tolerance support. Initially
  support a LAM/MPI-like protocol.
  --> Expected: 1.3


1.2.3
-----

- Fix issue found by Josh England: ompi_info would not show framework
  MCA parameters set in the environment properly.
- Rename the oob_tcp_include/exclude MCA params to oob_tcp_if_include/exclude
  so that they match the naming convention of the btl_tcp_if_include/exclude
  params.  The old names are depreciated, but will still work.
- Add -wd as a synonymn for the -wdir orterun/mpirun option.
- Fix the mvapi BTL to compile properly with compilers that do not support